fix layout broken in some pages, finalized final requisites

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -25,8 +25,4 @@ img {
     width: 10vw;
 }
 
-html, body {
-    min-height: 100vh;
-}
-
 
