--- a/src/pages/Admin/RegisterResident/styles.scss
+++ b/src/pages/Admin/RegisterResident/styles.scss
@@ -1,9 +1,8 @@
 @import '../../../assets/scss/global.scss';
 
-#container {
+.container-register {
     display: flex;
     width: 100%;
-    height: 100vh;
     position: relative;
     flex-direction: column;
     background-color: $colorPrimaryBackground;
@@ -27,7 +26,7 @@
         flex-direction: row;
         justify-content: center;
         width: 100%;
-        max-height: 9vh;
+        min-height: 9vh;
         padding: 0 5vw;
         box-shadow: 0 -5px 10px black; 
         
@@ -57,8 +56,7 @@
 
     #tab-content {
         padding: 8vw 5vw;
-        height: 82vh;
-        overflow-y: scroll; 
+        height: 100vh;
 
         form {
             list-style: none;
