--- a/src/pages/Admin/Reserves/styles.scss
+++ b/src/pages/Admin/Reserves/styles.scss
@@ -237,7 +237,6 @@
                     margin: 1.5vw 0;
 
                     h5 {
-                        line-height: 3vw;
                         font-size: 5vw;
                         color: $colorFont;
                     }
